--- a/firstlightdemo/Client/Shared/NavMenu.razor
+++ b/firstlightdemo/Client/Shared/NavMenu.razor
@@ -24,6 +24,26 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="fetchdepartmentdetails">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Department admin
+            </NavLink>
+        </div>            
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="fetchquestiondetails">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Question admin
+            </NavLink>
+        </div>        
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="dynamic">
+                <span class="oi oi-plus" aria-hidden="true"></span> Dynamic rendered DDL
+            </NavLink>
+        </div>        
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="dynamic">
+                <span class="oi oi-plus" aria-hidden="true"></span> Conditional DDL demo
+            </NavLink>
+        </div>
     </nav>
 </div>
 
